--- a/frontend-geo/public/manifest.json
+++ b/frontend-geo/public/manifest.json
@@ -1,21 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Geography Quiz",
+  "name": "Test Your Geography Knowledge",
+  "description": "A fun and interactive geography quiz to test your knowledge of world geography.",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
