--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,120 @@
+# Vercel
 .vercel
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Dependencies
 node_modules/
-.cache/
-.vercel
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Ignore node_modules in frontend and backend
 /frontend-geo/node_modules/
 /backend-geo/node_modules/
+/.pnp
+.pnp.js
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
 
-# Ignore build output folder in frontend
+# Testing
+/coverage
+/frontend-geo/coverage/
+/backend-geo/coverage/
+
+# Production builds
+/build
 /frontend-geo/build/
+/backend-geo/build/
+/frontend-geo/dist/
+/backend-geo/dist/
+
+# Environment variables (IMPORTANT - contains Firebase keys)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/frontend-geo/.env
+/backend-geo/.env
+
+# Firebase files and authentication (exclude from repository)
+frontend-geo/src/firebase/
+frontend-geo/src/utils/profanityFilter.js
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Cache directories
+.cache/
+.npm
+.eslintcache
+.stylelintcache
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Firebase (if you have local Firebase files)
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# Local Netlify folder
+.netlify
